<resources>
    <string name="app_name">FinalProject</string>
    <string name="Welcome">BBC News Reader.</string>
    <string name="loginMsg">Login:</string>
    <string name="loginPrompt">Enter your login info</string>
    <string name="password">Password:</string>
    <string name="loginBtn">Login</string>
    <string name="title">Favourites</string>
    <string name="infoBtn">Click here for more info</string>
    <string name="title_activity_nav_toolbar">NavToolbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="open">1</string>
    <string name="close">0</string>
    <string name="saved">saved</string>
    <string name="pwPrompt">Enter password here</string>
    <string name="nav_fav">"Go to Favourites "</string>


</resources>